# api.multiqc.info

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker.yml
app/: __init__.py  app_downloads.py  app_runs.py  app_visits.py  db.py  downloads.py  main.py  models.py  settings.py  utils.py
app/downloads/: .gitignore  daily.csv  daily.py
app/downloads/sources/: biocontainers-quay-historic.csv  daily.csv  github-pull-requests.csv
downloads/: .gitignore  _planetscale.py  daily.csv  daily.py  historical.csv  historical.py  playground.ipynb
downloads/cache/: new-modules.csv
downloads/sources/: biocontainers-quay-historic.csv  pypi-historic.csv
