[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "api.multiqc.info"
version = "2023.0"
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}
requires-python = ">=3.12"
authors = [
    {name = "Phil Ewels", email = "phil.ewels@seqera.io"},
    {name = "Vlad Savelyev", email = "vladislav.savelyev@seqera.io"},
]

[tool.ruff]
line-length = 120
target-version = "py312"
ignore-init-module-imports = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = "True"
scripts_are_modules = "True"
