[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "api.multiqc.info"
version = "2023.0"
dependencies = [
    "fastapi",
    "fastapi-utilities",
    "uvicorn",
    "sqlmodel",
    "pydantic",
    "pydantic-settings",
    "pymysql[rsa]",
    "psycopg2-binary",
    "types-requests",
    # visits
    "pandas",
    "plotly",
    # downloads
    "gitpython",
    "PyGithub",
    "pypistats",
]
optional-dependencies = { dev = [
    "pre-commit",
    "ruff",
    "mypy",
] }
requires-python = ">=3.12"
authors = [
    { name = "Phil Ewels", email = "phil.ewels@seqera.io" },
    { name = "Vlad Savelyev", email = "vladislav.savelyev@seqera.io" },
]

[tool.ruff]
line-length = 120
target-version = "py312"
ignore-init-module-imports = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = "True"
scripts_are_modules = "True"
